--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Player</title>
+    <title>Embedded Google Drive Video</title>
 </head>
 <body>
     <div style="text-align: center; margin-top: 50px;">
-        <video width="640" height="360" controls>
-            <source src="https://drive.google.com/uc?id=1yz2VVjXK3w3ZPO6Rl1xbZ33cCFYE2j5t&export=download" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <iframe 
+            src="https://drive.google.com/file/d/1yz2VVjXK3w3ZPO6Rl1xbZ33cCFYE2j5t/preview" 
+            width="640" 
+            height="360" 
+            allow="autoplay"
+            frameborder="0">
+        </iframe>
         <p style="margin-top: 10px;">If the video doesn't play, try downloading it.</p>
     </div>
 </body>
